Fixed movable windows Changed position from relative to absolute got rid of the input boxes bouncing around due to resize.  Was able to return to using display instead of visibility to hide the settings for each box.  Added handle to each box for moving and a delete icon to delete the entire window.

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -1,13 +1,13 @@
 body {
-  /*box-sizing: border-box;*/
+  box-sizing: border-box;
 }
 
 .draggable {
   display: inline-block;
-  position: relative;
-  background-color: rgba(0,0,0,0);
+  position: absolute;
+  background-color: rgba(50,50,50,0.10);
+  border-radius: 5px;
   width: auto;
-  cursor: move;
 }
 
 .button-container {
@@ -23,14 +23,21 @@ body {
   margin: 0 0 0 10px;
 }
 
-.settings-icon {
+.handle {
+  cursor: move;
+}
+
+.window-icon {
   display: inline-block;
-  cursor: pointer;
   width: 15px;
   float: right;
   height: auto;
   vertical-align: middle;
   padding: 2px;
+}
+
+.delete, .settings {
+  cursor: pointer;
 }
 
 .inputter {
@@ -44,15 +51,15 @@ body {
   cursor: pointer;
   text-align: center;
   border-radius: 3px;
-  padding: 0 2px;
-  margin: 1px 0;
+  padding: 0 3px;
+  margin: 2px 0 3px 0;
   width: auto;
   border: 1px solid black;
-  background-color: #aaaaaa;
+  background-color: lightgray;
 }
 
 .remove-view {
-  visibility: hidden;
+  display: none;
 }
 
 .select-object {
